--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calcAQpress)
 importFrom(gdistance,costDistance)
 importFrom(gdistance,geoCorrection)
 importFrom(gdistance,transition)
+importFrom(geosphere,distm)
 importFrom(plyr,ddply)
 importFrom(plyr,join)
 importFrom(raster,crop)
@@ -11,4 +12,3 @@ importFrom(raster,extract)
 importFrom(raster,getData)
 importFrom(raster,rasterize)
 importFrom(reshape2,melt)
-importFrom(rgeos,distm)
