--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,4 @@ importFrom(raster,extract)
 importFrom(raster,getData)
 importFrom(raster,rasterize)
 importFrom(reshape2,melt)
+importFrom(utils,write.csv)
