--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom(geosphere,distm)
 importFrom(plyr,ddply)
 importFrom(plyr,join)
 importFrom(raster,crop)
+importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getData)
 importFrom(raster,rasterize)
