--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calcAQpress)
 importFrom(gdistance,costDistance)
 importFrom(gdistance,geoCorrection)
 importFrom(gdistance,transition)
+importFrom(geosphere,distHaversine)
 importFrom(geosphere,distm)
 importFrom(plyr,ddply)
 importFrom(plyr,join)
