--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(raster,crop)
 importFrom(raster,extent)
 importFrom(raster,extract)
 importFrom(raster,getData)
+importFrom(raster,raster)
 importFrom(raster,rasterize)
 importFrom(reshape2,melt)
 importFrom(utils,write.csv)
