--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,6 @@ importFrom(raster,getData)
 importFrom(raster,raster)
 importFrom(raster,rasterize)
 importFrom(reshape2,melt)
+importFrom(sp,CRS)
+importFrom(sp,SpatialPoints)
 importFrom(utils,write.csv)
