--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,10 @@ Imports:
     reshape2,
     raster,
     gdistance,
-    geosphere
+    geosphere,
+    rgeos,
+    utils,
+    sp
 Depends:
     R (>= 3.3.1)
 License: GPL (>=2)
