--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,13 @@
 
 export(calcAQpress)
 import(plyr)
+import(raster)
 import(rgeos)
 importFrom(gdistance,costDistance)
 importFrom(gdistance,geoCorrection)
 importFrom(gdistance,transition)
 importFrom(geosphere,distHaversine)
 importFrom(geosphere,distm)
-importFrom(raster,crop)
-importFrom(raster,extent)
-importFrom(raster,extract)
-importFrom(raster,getData)
-importFrom(raster,raster)
-importFrom(raster,rasterize)
 importFrom(reshape2,melt)
 importFrom(sp,CRS)
 importFrom(sp,SpatialPoints)
