--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(calcAQpress)
 import(plyr)
 import(raster)
 import(rgeos)
+importFrom(dplyr,colwise)
 importFrom(gdistance,costDistance)
 importFrom(gdistance,geoCorrection)
 importFrom(gdistance,transition)
